--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "sequelize": "^6.32.1",
-    "sqlite3": "^5.1.6",
-    "dotenv": "^16.3.1",
     "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.0",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.7"
   }
 }
